<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.MyGShop.ui.home.LogedUserFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_loged_user"/>
    <fragment
            android:id="@+id/nav_library"
            android:name="com.example.MyGShop.ui.library.LibraryFragment"
            android:label="@string/menu_library"
            tools:layout="@layout/fragment_library"/>

    <fragment
            android:id="@+id/nav_categories"
            android:name="com.example.MyGShop.Options.CategoriesFragment"
            android:label="@string/action_categories"
            tools:layout="@layout/fragment_categories"
    />
    <fragment
            android:id="@+id/nav_shop"
            android:name="com.example.MyGShop.ui.shop.ShopFragment"
            android:label="@string/menu_shop"
            android:tag="fragA"
            tools:layout="@layout/fragment_shop"/>
</navigation>