<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/fondo_Oscuro"
             android:id="@+id/categoriesLayout"
             tools:context="com.example.MyGShop.Options.CategoriesFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:id="@+id/categories">

            <TextView
                    android:id="@+id/InitText"
                    android:text="@string/action_categories"
                    android:layout_centerHorizontal="true"
                    android:textSize="35dp"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
            </TextView>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/categoriesEdit"
                  android:padding="15dp"
                  android:layout_below="@+id/InitText"
                  android:hint="@string/categoriesEdit"
                  android:textColorHint="@color/gris_claro"
                  android:background="@drawable/layout_bg_edit"
                  android:inputType="text" android:layout_marginTop="15dp" android:layout_marginStart="15dp"
                  android:layout_marginEnd="15dp" android:layout_marginBottom="15dp"/>
        <TextView android:layout_width="0dp" android:layout_height="0dp" android:id="@+id/center"
        android:layout_centerHorizontal="true"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addButton"
                android:text="@string/add"
                android:textAllCaps="false"
                android:layout_toLeftOf="@+id/center"
                android:background="@drawable/layout_bg"
                android:layout_below="@+id/categoriesEdit"
                android:layout_margin="20dp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchButton"
                android:text="@string/search"
                android:textAllCaps="false"
                android:layout_toRightOf="@+id/center"
                android:background="@drawable/layout_bg"
                android:layout_below="@+id/categoriesEdit"
                android:layout_margin="20dp"/>
        <ScrollView
                android:layout_width="wrap_content"
                android:layout_below="@id/addButton"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

            <TableLayout
                    android:id="@+id/tabla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:padding="5dp"
                    android:background="@drawable/layout_table"
                    android:stretchColumns="*">
                <TableRow>
                    <TextView
                            android:background="@drawable/layout_tableheader"
                            android:text="@string/categoryName"
                            android:textColor="#FFF"
                            android:gravity="center"
                    android:padding="5dp"/>
                    <TextView
                            android:background="@drawable/layout_tableheader"
                            android:text="@string/categorytimes"
                            android:textColor="#FFF"
                            android:gravity="center"
                    android:padding="5dp"/>
                </TableRow>
            </TableLayout>

        </ScrollView>
    </RelativeLayout>



</FrameLayout>